render list products

--- a/src/layouts/UserLayout/UserLayout.module.scss
+++ b/src/layouts/UserLayout/UserLayout.module.scss
@@ -2,6 +2,7 @@
     margin-top: var(--header-height);
     margin-bottom: var(--header-height);
     display: flex;
+    min-height: 1000px;
 }
 
 .content {
