--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,20 +1,10 @@
 .footer {
     z-index: 10;
-    height: var(--header-height);
     background-color: var(--primary-clr);
     padding: 0 20px;
     display: flex;
 }
 
-.header-logo {
-    display: flex;
-    align-items: center;
-    img {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-    }
-}
 
 .footer-content {
     flex: 1;
@@ -25,6 +15,9 @@
     color: white;
     font-size: 14px;
 }
+li{
+    list-style: none;
+}
 
 @media (max-width: 991.98px) {
     .footer {
@@ -32,3 +25,46 @@
         z-index: unset;
     }
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0px 20px;
+  }
+  .row{
+    padding: 20px;
+  }
+  h3 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+  }
+  
+  p {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+  
+  .social li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .social a i {
+    font-size: 1.5rem;
+    color: #222;
+    transition: all 0.3s ease;
+  }
+  
+  .social a:hover i {
+    color: #007bff;
+  }
+  
+  .policy li {
+    margin-bottom: 10px;
+  }
+  
+  .policy a {
+    font-size: 0.9rem;
+    color: #222;
+    transition: all 0.3s ease;
+  }
