--- a/src/components/Layouts/Header/Header.module.scss
+++ b/src/components/Layouts/Header/Header.module.scss
@@ -66,7 +66,7 @@
 }
 .wrap-item{
     display: block;
-    border: 0.1px solid #443543;
+    border: 0.1px solid #eee;
     flex-direction: row;
     padding: 3px;
     padding-left: 10px;
