--- a/src/components/Helpers/GlobalStyles/GlobalStyles.scss
+++ b/src/components/Helpers/GlobalStyles/GlobalStyles.scss
@@ -26,5 +26,5 @@ body {
     font-size: 16px;
     line-height: 1.5;
     overflow-x: hidden;
-    background-color: #eee;
+    background-color: white;
 }
