--- a/src/components/Layouts/Header/Header.module.scss
+++ b/src/components/Layouts/Header/Header.module.scss
@@ -78,3 +78,26 @@
     padding: 3px;
     margin: 1px;
 }
+
+
+.wrap-account{
+    padding: 3px;
+    border: black solid 1px;
+    border-radius: 3px;
+    width: 240px;
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top:20px;
+    left: -120px;
+}
+.item-account{
+    padding: 3px ;
+    font-weight: 400;
+    &:hover{
+        color: blue;
+        cursor: pointer;
+    }
+}
